(SEC): buffer overflow

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "theme": "moonstone",
-  "cssTheme": "Big Sur Aesthetic",
+  "cssTheme": "Cardstock",
   "translucency": false,
   "enabledCssSnippets": [
     "mathjax_size",
